--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Medical Website</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h1>hello world</h1>
+    </div>
     <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
