feat: restructure index.html to enhance layout and add header section

--- a/index.html
+++ b/index.html
@@ -3,13 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/img/favicon.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" integrity="sha512-XcIsjKMcuVe0Ucj/xgIXQnytNwBttJbNjltBV18IOnru2lDPe9KRRyvCXw6Y5H415vbBLRm8+q6fmLUU7DfO6Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/src/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Medical Website</title>
   </head>
   <body>
-    <div id="app">
-      <h1>hello world</h1>
-    </div>
+    <!-- Start Header section -->
+    <header class="wrapper">
+      <nav>
+        <div class="logo">
+          <img src="img/favicon.png" alt="icon">
+          <p>Medical</p>
+        </div>
+        <i class="ri-moon-fill"></i>
+        <i class="ri-menu-line"></i>
+      </nav>
+      <div class="home-content">
+        <div class="fst__section">
+          <h1 class="home__title"><span>Get Quick</span> <br> Medical Service</h1>
+          <p class="home__description">
+            Get your medical service from a certified doctor and health professional.
+          </p>
+          <a href="#" class="btn">Get Started</a>
+        </div>
+        <div class="snd__section">
+          <div class="snd__wrapper">
+            <div class="name">
+              <p class=".home__name">Dr. Myla Harts</p>
+              <p class=".home__profession">Bones Specialist</p>
+              <i class="ri-medicine-bottle-fill"></i>
+              <i class="ri-24-hours-line"></i>
+            </div>
+            <a href="#" class="contact-btn">
+              <i class="ri-arrow-right-s-line"></i>
+              Contact
+            </a>
+          </div>
+          <img src="img/home-img.png" alt="home-img">
+        </div>
+      </div>
+    </header>
+    <!-- End header section -->
     <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
