feat: update navigation icons structure for improved layout

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
           <img src="img/favicon.png" alt="icon">
           <p>Medical</p>
         </div>
-        <i class="ri-moon-fill"></i>
-        <i class="ri-menu-line"></i>
+        <div class="icons">
+          <i class="ri-moon-fill icon"></i>
+          <i class="ri-menu-line icon"></i>
+        </div>
       </nav>
       <div class="home-content">
         <div class="fst__section">
