feat: enhance layout and styling for header and home sections

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
           <i class="ri-menu-line icon"></i>
         </div>
       </nav>
+    </header>
+    <section>
       <div class="home-content">
         <div class="fst__section">
           <h1 class="home__title"><span>Get Quick</span> <br> Medical Service</h1>
@@ -33,20 +35,20 @@
         <div class="snd__section">
           <div class="snd__wrapper">
             <div class="name">
-              <p class=".home__name">Dr. Myla Harts</p>
-              <p class=".home__profession">Bones Specialist</p>
-              <i class="ri-medicine-bottle-fill"></i>
-              <i class="ri-24-hours-line"></i>
+              <p class="home__name">Dr. Myla Harts</p>
+              <p class="home__profession">Bones Specialist</p>
+              <i class="ri-medicine-bottle-fill snd__section_icon"></i>
+              <i class="ri-24-hours-line snd__section_icon"></i>
             </div>
             <a href="#" class="contact-btn">
-              <i class="ri-arrow-right-s-line"></i>
-              Contact
+              <i class="ri-arrow-right-wide-line arrow"></i>
+              <p>Contact</p>
             </a>
           </div>
           <img src="img/home-img.png" alt="home-img">
         </div>
       </div>
-    </header>
+    </section>
     <!-- End header section -->
     <script type="module" src="/src/js/main.js"></script>
   </body>
