feat: add medical service section and update vaccine details layout

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
     <!-- End header section -->
     <section class="vaccine">
-      <div class="vaccine__details">
+      <div class="details">
         <h1>
           Vaccine Injections <br />
           <span>Delivery Service</span>
@@ -121,6 +121,54 @@
         </button>
       </div>
     </section>
+    <section class="medical_service">
+      <div class="medical_service__section">
+        <div class="details medical_service__title">
+          <h1>
+            <span>We Have Certified</span> <br />
+            Medical Service
+          </h1>
+          <p>
+            Don't worry, we have certified medical services, so you can receive
+            medical consultations in any specialty.
+          </p>
+        </div>
+        <div class="medical_service__numbers">
+          <div class="medical_service__details">
+            <p>
+              <span>256</span> Healthy <br />
+              Patients
+            </p>
+          </div>
+          <div class="medical_service__details">
+            <p>
+              <span>16</span> Hospital <br />
+              Care
+            </p>
+          </div>
+          <div class="medical_service__details">
+            <p>
+              <span>8</span> Years Of <br />
+              Experience
+            </p>
+          </div>
+        </div>
+        <div class="medical_service__btn">
+          <a href="#">
+            <p>Contact Me</p>
+            <i class="ri-arrow-right-s-line"></i>
+          </a>
+        </div>
+        <div class="medical_service__img">
+          <img src="/img/about-img.png" alt="about img" />
+        </div>
+      </div>
+    </section>
+
+    <section class="price"></section>
+    <div class="arrow_to_top">
+      <i class="ri-arrow-up-line"></i>
+    </div>
     <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
