Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -165,7 +165,123 @@
       </div>
     </section>
 
-    <section class="price"></section>
+    <!-- <section class="price">
+      <div class="price_section">
+        <div class="details">
+          <h1><span>Affordable Prices To</span> <br> Check Your Health</h1>
+          <p>Get the best prices, make inquiries, checkups, and visit your home. Schedule your consultation now.</p>
+        </div>
+        <div class="prices__details">
+          
+        </div>
+      </div>
+    </section> -->
+    <section class="gallery__section">
+      <div class="gallery__item1">
+        <img src="/img/gallery-img-1.png" alt="img-1" class="gallery__item_img"/>
+      </div>
+      <div class="gallery__item2">
+        <img src="/img/gallery-img-2.png" alt="img-2" class="gallery__item_img"/>
+      </div>
+      <div class="gallery__item3">
+        <img src="/img/gallery-img-3.jpg" alt="img-3" class="gallery__item_img"/>
+      </div>
+      <div class="gallery__item4">
+        <img src="/img/gallery-img-4.jpg" alt="img-4" class="gallery__item_img"/>
+      </div>
+    </section>
+
+    <section class="contact_me">
+      <div class="contact_me__section">
+        <div class="details">
+          <h1>
+            Contact Me <br />
+            <span>On All Platforms</span>
+          </h1>
+          <p>
+            Contact me on all my social media channels. I'm available for you
+            and your health. Write to me now.
+          </p>
+        </div>
+        <div class="contact__social">
+          <div class="write_to_me">
+            <div class="deivery__subsection__icon">
+              <i class="ri-chat-ai-fill"></i>
+            </div>
+            <h3>Write to me</h3>
+            <div class="contact__social__icons">
+              <i class="ri-messenger-fill"></i>
+              <i class="ri-whatsapp-fill"></i>
+              <i class="ri-telegram-2-fill"></i>
+              <i class="ri-mail-fill"></i>
+            </div>
+          </div>
+          <div class="write_to_me">
+            <div class="deivery__subsection__icon">
+              <i class="ri-map-pin-2-fill"></i>
+            </div>
+            <h3>Location</h3>
+            <p>
+              Lima - Peru <br />
+              Av. The Trees #0123
+            </p>
+          </div>
+          <div class="write_to_me">
+            <div class="deivery__subsection__icon">
+              <i class="ri-cup-fill"></i>
+            </div>
+            <h3>Attention</h3>
+            <p>
+              Monday - Friday <br />
+              8am - 6pm
+            </p>
+          </div>
+          <div class="write_to_me">
+            <div class="deivery__subsection__icon">
+              <i class="ri-phone-fill"></i>
+            </div>
+            <h3>Phone Number</h3>
+            <p>
+              +0123(00)-765-4321 <br />
+              +00-0123456
+            </p>
+          </div>
+        </div>
+        <div class="contact_me_map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d53002.93108843504!2d90.4134656!3d23.9992832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sbd!4v1769200314672!5m2!1sen!2sbd"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            class="map"
+          ></iframe>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="logo footer_logo">
+        <i class="ri-stethoscope-line"></i>
+        <p>Medical</p>
+      </div>
+      <div class="link_pages">
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Prices</a>
+      </div>
+      <div class="footer_icon">
+        <i class="ri-meta-fill"></i>
+        <i class="ri-instagram-fill"></i>
+        <i class="ri-twitter-x-line"></i>
+        <i class="ri-youtube-fill"></i>
+        <i class="ri-tiktok-line"></i>
+      </div>
+      <p>&#169; All Rights Reserved By Bedimcode</p>
+    </footer>
+
     <div class="arrow_to_top">
       <i class="ri-arrow-up-line"></i>
     </div>
